@@ -10,11 +10,14 @@ Comments= <<EOT
 - Add the length() and pos() mutators, to allow the user to control the call to the recognizer's
 read() method. See the FAQ.
 - Add the exhaustion_is_fatal option. See error_number() == 6 for details.
-- When the parse is successful, error_message() now returns 'OK'. It used to return ''.
 - Add t/skip.prefix.t to demonstrate pos() and length().
 - Add scripts/tiny.pl for quick tests without Test::More.
 - Add the escape_char() mutator, to allow the user to overrider the default backslash escape char.
 - Add t/non.default.escapes.t to demonstrate escape_char().
+- Add more error numbers, corresponding the 'die's which were not previously consistent with the
+way error_numbers and error_messages should be set.
+- comment explicitly all 'die's within the scope of try{} catch{}, and visa versa. This affects
+how 'Error: ' is only added once to error messages being printed.
 EOT
 
 [V 1.01]
